Fixed: - grid-layout to make all cards visible - Amended the card back sizing - Added HTML parser for json objects - Began to format the text in names.json - further improvements to overlay positining

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -47,6 +47,6 @@
     backface-visibility: hidden;
 }
 .back img {
-    width: 60px;
-    height: 60px;
+    width: 4rem;
+    height: 4rem;
 }
